Fix and improve spacing on home page

--- a/src/_includes/css/home.css
+++ b/src/_includes/css/home.css
@@ -6,7 +6,10 @@
   font-size: 4.5rem;
   font-weight: 900;
   text-align: center;
-  margin: 0 0 3.5rem;
+  margin: 0 auto 3.5rem;
+  padding: 0;
+  left: 0;
+  width: 100%;
 }
 
 .home_titleImg {
@@ -33,7 +36,7 @@
   margin: 0 0.5rem;
   font-size: 1.1rem;
   padding: 1em 1.75em;
-  border-radius: 0.3125rem;
+  border-radius: 0.5rem;
 }
 
 .home_launchCta {
@@ -52,6 +55,34 @@
   }
 
   .page .home_title {
+    margin-bottom: 2.5rem;
+  }
+
+  .home_titleImg {
+    height: 4rem;
+  }
+
+  .home_description {
+    font-size: 1.05rem;
+    max-width: 100%;
+    padding: 0 25px;
+    margin-bottom: 2.5rem;
+  }
+
+  .home_ctas {
+    flex-direction: column-reverse;
+  }
+
+  .home_cta {
+    margin-bottom: 1rem;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 340px) {
+  .page .home_title {
     margin-bottom: 1.25rem;
   }
 
@@ -60,20 +91,6 @@
   }
 
   .home_description {
-    font-size: 1.05rem;
-    max-width: 100%;
-    padding: 0 25px;
-    margin-bottom: 2rem;
-  }
-
-  .home_ctas {
-    flex-direction: column-reverse;
-  }
-
-  .home_cta {
-    margin-bottom: 0.5rem;
-    width: 80%;
-    display: flex;
-    justify-content: center;
+    margin-bottom: 1.5rem;
   }
 }
